--- a/informative-table-fe/css/dashboard.css
+++ b/informative-table-fe/css/dashboard.css
@@ -10,3 +10,69 @@
 .no-screens-message {
     color: #e31e1e;
 }
+
+.card-custom {
+  background-image: url("../assets/images/card-background.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+  margin-left: 0;
+  margin-right: 0;
+  box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.2);
+  width: 100%;
+  height: 12rem;
+  border-radius: 10px;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 12rem;
+  background-color: #fff;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  color: #e31e1e;
+  justify-content: center;
+}
+
+.card-custom .fade {
+  transition: all 0.3s ease-in;
+  opacity: 0;
+}
+
+.card-custom:hover .fade {
+  opacity: 1;
+  border-radius: 10px;
+}
+
+.screen-btn {
+	margin: 10px;
+	padding: 10px 40px;
+  background-color: #e31e1e;
+  color: #fff;
+  font-size: 15px;
+  font-weight: 500;
+	text-align: center;
+  text-decoration: none !important;
+	position: relative;
+	overflow: hidden;
+  transition: .3s;
+  border-radius: 5px;
+}
+
+.screen-btn:hover {
+  color: #fff;
+  cursor: pointer;
+}
+
+.screen-name {
+  color: #e31e1e;
+  text-align: center;
+}
