--- a/informative-table-fe/css/global.css
+++ b/informative-table-fe/css/global.css
@@ -1,19 +1,69 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');
+
+body {
+    font-family: 'Nunito', sans-serif;
+}
+
+a{
+    text-decoration: none !important;
+}
+
+.form-control:focus {
+    color: #495057;
+    background-color: #fff;
+    border: 1px solid #ced4da !important;
+    box-shadow: none !important;
+    outline: 0;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active  {
+    box-shadow: 0 0 0 30px white inset !important;
+    -webkit-box-shadow: 0 0 0 30px white inset !important;
+}
+
+.btn {
+    transition: none !important;
+    box-shadow: none !important;
+}
+
 header {
     border-bottom: 1px solid rgba(0,0,0,0.1);
     padding: 5px 0;
 }
 
+.locations, .locations:hover {
+    color: black;
+}
+
+.title {
+    font-size: 25px;
+    font-weight: 600;
+}
+
 .user-profile{
     display: flex;
-    flex-flow: column;
-    justify-content: center;
-    align-items: flex-end;
+    justify-content: flex-end;
+    align-items: center;
+    font-weight: 600;
 }
 
 #log-out {
+    margin-left: 15px;
     cursor: pointer;
 }
 
 button:focus{
     outline: none;
+}
+
+.iw-short-logo {
+    height: 60px;
+    width: auto;
+}
+
+#toast-container > div {
+    opacity: 1 !important;
 }
