--- a/informative-table-fe/css/login.css
+++ b/informative-table-fe/css/login.css
@@ -1,4 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400');
+.login-page {
+    background: url("../assets/images/login-page-bg.png") repeat top left fixed;
+	background-size: cover;
+}
 
 .login-form{
     height: 100vh;
@@ -16,6 +19,7 @@
     border-top: 10px solid #e31e1e;
     border-bottom: 10px solid #e31e1e;
     padding: 30px;
+    box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.2);
 }
 
 #particles-js{
@@ -53,15 +57,17 @@ h2, label {
     font-weight: 500;
 }
 
+input:-webkit-autofill {
+    -webkit-text-fill-color: #e31e1e !important;
+    background-color: #fff !important;
+}
+
 input:-webkit-autofill,
 input:-webkit-autofill:hover, 
 input:-webkit-autofill:focus, 
 input:-webkit-autofill:active  {
+    box-shadow: 0 0 0 30px white inset !important;
     -webkit-box-shadow: 0 0 0 30px white inset !important;
-}
-
-input:-webkit-autofill {
-    -webkit-text-fill-color: #e31e1e !important;
 }
 
 .user-box label {
