--- a/informative-table-fe/css/edit-screen.css
+++ b/informative-table-fe/css/edit-screen.css
@@ -3,6 +3,10 @@
     clear: both;
 }
 
+.owl-carousel .owl-stage{
+    display: flex;
+}
+
 .slide-widget{
     background: #fff;
     color: gray;
@@ -14,6 +18,10 @@
     text-align: center;
     cursor: pointer;
     font-size: 20px;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    display: flex;
 }
 
 .owl-nav {
